# printer-driver-ptouch

./: .gitignore  AUTHORS  CONTRIBUTING.md  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  config.h.in  configure  configure.ac  explain.txt  foomatic-fix-75de02d.patch  foomaticalize  getusbprinterid  ptexplain.c  ptouch-driver-foomatic.spec.in  ptouch-driver.spec.in  rastertoptch.c
.github/ISSUE_TEMPLATE/: bug_report.md
.pc/: applied-patches
.pc/foomatic-data-fixes.patch/driver/: ptouch.xml
.pc/foomatic-data-fixes.patch/printer/: Brother-QL-550.xml
.pc/send-esc-i-A-for-QL-only.patch/: rastertoptch.c
Examples/PT-P700/: 12mm.prn  12mm.ptexplain
Examples/PT-P900W/: 12mm-Draft.prn  12mm-Draft.ptexplain  12mm-Resolution.prn  12mm-Resolution.ptexplain  12mm-Standard.prn  12mm-Standard.ptexplain
Examples/QL-820NWB/: Label-29x90mm-Quality.prn  Label-29x90mm-Quality.ptexplain  Label-29x90mm-Resolution.prn  Label-29x90mm-Resolution.ptexplain  Label-29x90mm-Speed.prn  Label-29x90mm-Speed.ptexplain  Tape-29x90mm-Quality.prn  Tape-29x90mm-Quality.ptexplain  Tape-29x90mm-Resolution.prn  Tape-29x90mm-Resolution.ptexplain  Tape-29x90mm-Speed.prn  Tape-29x90mm-Speed.ptexplain
debian/: changelog  control  copyright  postinst  printer-driver-ptouch.install  printer-driver-ptouch.ppd-updater  ptouch-driver.ppd-updater  rules  source.lintian-overrides  watch
debian/local/: apport-hook.py
debian/local/pyppd/: CHANGES.txt  ISSUES.txt  PKG-INFO  README.txt  setup.py
debian/local/pyppd/pyppd/: archiver.py  compressor.py  ppd.py  pyppd-ppdfile.in  runner.py
debian/patches/: foomatic-data-fixes.patch  send-esc-i-A-for-QL-only.patch  send-esc-i-A.patch  series
driver/: ptouch-pt.xml  ptouch-ql.xml  ptouch.xml
halftoning/: CommonTypedefs.h  ErrorDiffusionHalftoning.cpp  ErrorDiffusionHalftoning.h  HalftoneHelper.h  Halftoning.cpp  Halftoning.h  NonLinearLaplacianHalftoning.cpp  NonLinearLaplacianHalftoning.h
opt/: Brother-PT-HalfCut.xml  Brother-PT-LabelRecovery.xml  Brother-PT-LegacyHires.xml  Brother-PT-LegacyTransferMode.xml  Brother-PT-Margin.xml  Brother-PT-PageSize.xml  Brother-PT-TransferMode.xml  Brother-PTQL-AdvanceDistance.xml  Brother-PTQL-AdvanceMedia.xml  Brother-PTQL-Align.xml  Brother-PTQL-AutoCut.xml  Brother-PTQL-BytesPerLine.xml  Brother-PTQL-ChainPrinting.xml  Brother-PTQL-ConcatPages.xml  Brother-PTQL-CutLabel.xml  Brother-PTQL-CutMedia.xml  Brother-PTQL-Debug.xml  Brother-PTQL-LabelPreamble.xml  Brother-PTQL-LabelRecovery.xml  Brother-PTQL-LastPageFlag.xml  Brother-PTQL-Margin.xml  Brother-PTQL-MinMargin.xml  Brother-PTQL-MirrorPrint.xml  Brother-PTQL-NegativePrint.xml  Brother-PTQL-PixelTransfer.xml  Brother-PTQL-Resolution.xml  Brother-PTQL-Series.xml  Brother-PTQL-SoftwareMirror.xml  Brother-PTQL-TransferMode.xml  Brother-Ptouch-AdvanceDistance.xml  Brother-Ptouch-AdvanceMedia.xml  Brother-Ptouch-Align.xml  Brother-Ptouch-BytesPerLine.xml  Brother-Ptouch-ConcatPages.xml  Brother-Ptouch-CutMark.xml  Brother-Ptouch-CutMedia.xml  Brother-Ptouch-HalfCut.xml  Brother-Ptouch-LabelPreamble.xml  Brother-Ptouch-MirrorPrint.xml  Brother-Ptouch-NegativePrint.xml  (+18 more)
printer/: Brother-PT-1500PC.xml  Brother-PT-18R.xml  Brother-PT-1950.xml  Brother-PT-1950VP.xml  Brother-PT-1960.xml  Brother-PT-2300.xml  Brother-PT-2420PC.xml  Brother-PT-2430PC.xml  Brother-PT-2450DX.xml  Brother-PT-2500PC.xml  Brother-PT-2600.xml  Brother-PT-2610.xml  Brother-PT-3600.xml  Brother-PT-550A.xml  Brother-PT-9200DX.xml  Brother-PT-9200PC.xml  Brother-PT-9400.xml  Brother-PT-9500PC.xml  Brother-PT-9600.xml  Brother-PT-9700PC.xml  Brother-PT-D460BT.xml  Brother-PT-E550W.xml  Brother-PT-P300BT.xml  Brother-PT-P700.xml  Brother-PT-P710BT.xml  Brother-PT-P750W.xml  Brother-PT-P900W.xml  Brother-PT-P950NW.xml  Brother-PT-PC.xml  Brother-QL-500.xml  Brother-QL-550.xml  Brother-QL-560.xml  Brother-QL-570.xml  Brother-QL-600.xml  Brother-QL-650TD.xml  Brother-QL-700.xml  Brother-QL-800.xml  Brother-QL-810W.xml  Brother-QL-820NWB.xml
